--- a/app/src/main/res/values/mapzen.xml
+++ b/app/src/main/res/values/mapzen.xml
@@ -1,1 +1,1 @@
-<resources><string name="turn_by_turn_key">valhalla-3rjoxB7</string></resources>
+<resources><string name="mapzen_api_key">mapzen-A1EYfmg</string></resources>
