Add search teacher

--- a/app/src/main/res/layout/dialog_teacher.xml
+++ b/app/src/main/res/layout/dialog_teacher.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dialog_layout"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    >
+   >
 
-    <EditText
-        android:id="@+id/editText"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
-
-    <ListView
-        android:id="@+id/teacher_list"
-        android:layout_width="match_parent"
+        android:textColorHint="@color/colorPrimaryDark"
         android:layout_height="wrap_content">
-    </ListView>
 
-</LinearLayout>
+        <AutoCompleteTextView
+            android:id="@+id/input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:hint="Nazwisko"
+            android:imeOptions="actionDone"
+            android:inputType="text" />
+
+    </android.support.design.widget.TextInputLayout>
+</FrameLayout>
