--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#9a1e13</color>
     <color name="colorPrimaryDark">#9a1e18</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#9a1e18</color>
 
     <color name="primary_light">#B2EBF2</color>
     <color name="primary_text">#212121</color>
