--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,6 +11,16 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.pwr.routing.MainActivity"
     tools:showIn="@layout/activity_main">
+    <Button
+        android:id="@+id/startButton"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:padding="5px"
+        android:layout_margin="20px"
+        android:text="Start navigation"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/primary_light"
+        android:enabled="false"/>
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
