--- a/app/src/main/res/layout/dialog_teacher.xml
+++ b/app/src/main/res/layout/dialog_teacher.xml
@@ -15,6 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:hint="Nazwisko"
             android:imeOptions="actionDone"
             android:inputType="text" />
